services/friend/deploy/canary/friend-service-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friend-service
  labels:
    app: friend-service
    version: canary
spec:
  replicas: 5
  selector:
    matchLabels:
      app: friend-service
      version: canary
  template:
    metadata:
      labels:
        app: friend-service
        version: canary
    spec:
      containers:
        - name: friend-service
          image: friend-service:latest
          ports:
            - containerPort: 8010
            - containerPort: 8011
