services/friend/deploy/canary/friend-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: friend-service
spec:
  selector:
    app: friend-service
    version: green
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
