services/friend/deploy/canary/friend-service-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: friend-service
spec:
  hosts:
    - friend-service
  http:
    - route:
        - destination:
            host: friend-service
            subset: stable
          weight: 90
        - destination:
            host: friend-service
            subset: canary
          weight: 10
      port: 8080
